2008-05-13  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	Reviewed by Sébastien Granjoux <seb.sfo@free.fr>:
	* tagmanager/tm_tag.c:
	* tagmanager/test_tm_buffer.c:
	* plugins/editor/scintilla/LexNsis.cxx:
	* plugins/editor/aneditor.cxx:
	* plugins/file-manager/file-view.c:
	Fixed a bunch of compiler warnings

2008-05-10  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-browser/anjuta-symbol-browser-plugin.glade:
	* plugins/symbol-browser/plugin.c (project_root_added),
	(isymbol_manager_search):
	
	Fixed global tags loading from project configuration and added a
	configuration option

2008-05-08  Johannes Schmid  <jhs@gnome.org>

	Patch from Marc Lorber <lorber.marc@wanadoo.fr>

	* plugins/gtodo/libgtodo.c (gtodo_client_get_category_from_list):
	* plugins/subversion/subversion-log-dialog.c (create_columns):
	
	Fix translation issues (#530860 and #531411)

2008-05-08  Johannes Schmid  <jhs@gnome.org>

	Patch from Eduardo Pérez Ureta <edpeur@gmail.com>

	* plugins/project-wizard/templates/cpp/configure.ac.tpl:
	* plugins/project-wizard/templates/gcj/configure.ac.tpl:
	* plugins/project-wizard/templates/java/configure.ac.tpl:
	* plugins/project-wizard/templates/minimal/autogen.sh:
	* plugins/project-wizard/templates/minimal/configure.ac.tpl:
	* plugins/project-wizard/templates/python/configure.ac.tpl:
	* plugins/project-wizard/templates/sdl/configure.ac.tpl:
	* plugins/project-wizard/templates/wxwin/configure.ac.tpl:
	* plugins/project-wizard/templates/xlib/configure.ac.tpl:
	
	#531405 – AM_CONFIG_HEADER macro is obsolete
	
	project-wizard is creating new projects using the AM_CONFIG_HEADER obsolete macro:
	http://www.gnu.org/software/automake/manual/automake.html#Obsolete-macros

2008-05-07  Massimo Cora'  <maxcvs@email.it>

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/class-inheritance/class-inherit.c
	(class_inheritance_show_dynamic_class_popup_menu):
	* plugins/language-support-cpp-java/cpp-java-assist.c