@@ -1,3 +1,8 @@
+2008-05-13  Sébastien Granjoux  <seb.sfo@free.fr>
+
+	* plugins/debug-manager/debug_tree.c:
+	Fix #531623: Crash on updating non-existing watch
+
 2008-05-13  Christian Kirbach  <Christian.Kirbach@googlemail.com>
 
 	Reviewed by Sébastien Granjoux <seb.sfo@free.fr>:
